# via-server

./: docker-compose-celestia-demo.yml  flake.nix  run-celestia.sh
core/lib/celestia_client/: Cargo.toml
core/lib/celestia_client/src/: lib.rs
core/lib/via_btc_client/: Cargo.toml
core/lib/via_btc_client/examples/: inscriber.rs
core/lib/via_btc_client/src/: lib.rs  regtest.rs  traits.rs  types.rs
core/lib/via_btc_client/src/client/: mod.rs  rpc_client.rs
core/lib/via_btc_client/src/inscriber/: fee.rs  mod.rs
core/lib/via_btc_client/tests/: main.rs  mod.rs  segwit.rs  taproot.rs  temp_tx.bash  testnet_sample.rs
core/node/da_dispatcher/src/: da_dispatcher.rs
demo/: cargo.toml  demo.sh  dummy_data.sh
demo/configs/: general.yaml  wallets.yaml
demo/data/: pubdata_input_1.txt  pubdata_input_2.txt  pubdata_input_3.txt  pubdata_input_4.txt  pubdata_input_5.txt
demo/src/: main.rs
