[package]
name = "via_btc_client"
description = "Via Network Bitcoin Inscription Standard Implementation"
version.workspace = true
edition.workspace = true
authors = ["Via Network"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "via_btc_test"
path = "tests/main.rs"

[dependencies]
zksync_types.workspace = true
zksync_config.workspace = true

thiserror.workspace = true
async-trait.workspace = true
jsonrpsee = { workspace = true, features = [
    "client",
    "macros",
] }
bitcoin = "0.32.2"
bitcoincore-rpc = "0.19.0"
secp256k1 = "0.29.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"